--- a/Consumer/forgotpass2.html
+++ b/Consumer/forgotpass2.html
@@ -5,18 +5,18 @@
     <h1 id="welcome">Welcome</h1>
   </div>
   <div id="right">
-    <h1 id="login">LogIn</h1><br>
+    <h1 id="login">Forgot Password</h1><br>
     <input type="email" id="email" class="client-info">
     <label for="email">Email</label>
     <input type="password" id="password" class="client-info">
-    <label for="password">Password</label>
-    <a href="homepage.html" style="text-decoration: none;">
+    <label for="password">Temporary password</label>
+    <input type="password" id="password" class="client-info">
+    <label for="password">New Password</label>
+    <input type="password" id="password" class="client-info">
+    <label for="password">New Password Again</label>
+    <a style="text-decoration: none;">
       <input type="submit" id="submit" class="client-info" value="LogIn">
     </a>
-    <a href="forgotpass.html" style="text-decoration: none;">
-      <button class="social" id="forgot">forgot password</button>
-    </a>
-    
+
   </div>
-  
 </div>
