--- a/Consumer/devices.html
+++ b/Consumer/devices.html
@@ -35,7 +35,9 @@
         <div class="sidebar">
 
             <div class="sidebar_icon">
-                <i class='fas fa-home' style='font-size:17px;color:rgb(255, 255, 255)'>&nbsp&nbsp Home</i>
+                <a href="homepage.html">
+                    <i class='fas fa-home' style='font-size:17px;color:rgb(255, 255, 255)'>&nbsp&nbsp Home</i>
+                </a>
               </div>
 
           <div class="sidebar_icon">
