--- a/Consumer/homepage.html
+++ b/Consumer/homepage.html
@@ -35,20 +35,32 @@
         <div class="sidebar">
 
             <div class="sidebar_icon">
-                <i class='fas fa-home' style='font-size:17px;color:rgb(255, 255, 255)'>&nbsp&nbsp Home</i>
+                <a href="homepage.html">
+                    <i class='fas fa-home' style='font-size:17px;color:rgb(255, 255, 255)'>&nbsp&nbsp Home</i>
+                </a>
               </div>
 
           <div class="sidebar_icon">
-            <i class='fas fa-th' style='font-size:17px;color:rgb(255, 255, 255)'>&nbsp&nbsp Rooms</i>
+            <a href="rooms.html">
+
+                <i  class='fas fa-th' style='font-size:17px;color:rgb(255, 255, 255)'>&nbsp&nbsp Rooms</i>
+
+            </a>
           </div>
 
           <div class="sidebar_icon">
-            <i class='fas fa-wifi' style='font-size:17px;color:rgb(255, 255, 255)'>&nbsp&nbsp Devices</i>
+            <a href="devices.html">
+                <i class='fas fa-wifi' style='font-size:17px;color:rgb(255, 255, 255)'>&nbsp&nbsp Devices</i>
+            </a>
+            
           </div>
 
 
           <div class="sidebar_icon">
-            <i class='fas fa-cog' style='font-size:17px;color:rgb(255, 255, 255)'>&nbsp&nbsp Settings</i>
+            <a href="settings.html">
+                <i class='fas fa-cog' style='font-size:17px;color:rgb(255, 255, 255)'>&nbsp&nbsp Settings</i>
+            </a>
+            
           </div>
 
             <body onLoad="initClock()">
