--- a/Consumer/rooms.html
+++ b/Consumer/rooms.html
@@ -34,9 +34,11 @@
         <!-- SIDEBAR -->
         <div class="sidebar">
 
-            <div class="sidebar_icon">
+          <div class="sidebar_icon">
+            <a href="homepage.html">
                 <i class='fas fa-home' style='font-size:17px;color:rgb(255, 255, 255)'>&nbsp&nbsp Home</i>
-              </div>
+            </a>
+          </div>
 
           <div class="sidebar_icon">
             <i class='fas fa-th' style='font-size:17px;color:rgb(255, 255, 255)'>&nbsp&nbsp Rooms</i>
