--- a/Consumer/devices.html
+++ b/Consumer/devices.html
@@ -24,9 +24,9 @@
       <!-- HEADER -->
       <header class="header">
         <div class="header__options">
-          <button class="header__pro">Log out</button>
+            <a href="../index.php" class="header__pro">Log out</a>
         </div>
-      </header>
+    </header>
 
       <!-- BODY -->
       <div class="body">
@@ -41,16 +41,26 @@
               </div>
 
           <div class="sidebar_icon">
-            <i class='fas fa-th' style='font-size:17px;color:rgb(255, 255, 255)'>&nbsp&nbsp Rooms</i>
+            <a href="rooms.html">
+
+                <i  class='fas fa-th' style='font-size:17px;color:rgb(255, 255, 255)'>&nbsp&nbsp Rooms</i>
+
+            </a>
           </div>
 
           <div class="sidebar_icon">
-            <i class='fas fa-wifi' style='font-size:17px;color:rgb(255, 255, 255)'>&nbsp&nbsp Devices</i>
+            <a href="devices.html">
+                <i class='fas fa-wifi' style='font-size:17px;color:rgb(255, 255, 255)'>&nbsp&nbsp Devices</i>
+            </a>
+            
           </div>
 
 
           <div class="sidebar_icon">
-            <i class='fas fa-cog' style='font-size:17px;color:rgb(255, 255, 255)'>&nbsp&nbsp Settings</i>
+            <a href="settings.html">
+                <i class='fas fa-cog' style='font-size:17px;color:rgb(255, 255, 255)'>&nbsp&nbsp Settings</i>
+            </a>
+            
           </div>
 
             <body onLoad="initClock()">
