--- a/Consumer/forgotpass.html
+++ b/Consumer/forgotpass.html
@@ -11,9 +11,10 @@
     <a href="forgotpass2.html" style="text-decoration: none">
       <button class="social" id="signup">reset my password</button>
     </a>
-    <a href="login.html" style="text-decoration: none">
+    <a href="../index.php" style="text-decoration: none">
       <button class="social" id="signup">return to login page</button>
     </a>
+    
     
   </div>
 </div>
