--- a/Consumer/livingroom.html
+++ b/Consumer/livingroom.html
@@ -24,9 +24,9 @@
       <!-- HEADER -->
       <header class="header">
         <div class="header__options">
-          <button class="header__pro" href="login.php">Log out</button>
+            <a href="../index.php" class="header__pro">Log out</a>
         </div>
-      </header>
+    </header>
 
       <!-- BODY -->
       <div class="body">
@@ -34,22 +34,34 @@
         <!-- SIDEBAR -->
         <div class="sidebar">
 
-            <div class="sidebar_icon">
+          <div class="sidebar_icon">
+            <a href="homepage.html">
                 <i class='fas fa-home' style='font-size:17px;color:rgb(255, 255, 255)'>&nbsp&nbsp Home</i>
-              </div>
-
-          <div class="sidebar_icon">
-            <i class='fas fa-th' style='font-size:17px;color:rgb(255, 255, 255)'>&nbsp&nbsp Rooms</i>
+            </a>
           </div>
 
-          <div class="sidebar_icon">
+      <div class="sidebar_icon">
+        <a href="rooms.html">
+
+            <i  class='fas fa-th' style='font-size:17px;color:rgb(255, 255, 255)'>&nbsp&nbsp Rooms</i>
+
+        </a>
+      </div>
+
+      <div class="sidebar_icon">
+        <a href="devices.html">
             <i class='fas fa-wifi' style='font-size:17px;color:rgb(255, 255, 255)'>&nbsp&nbsp Devices</i>
-          </div>
+        </a>
+        
+      </div>
 
 
-          <div class="sidebar_icon">
+      <div class="sidebar_icon">
+        <a href="settings.html">
             <i class='fas fa-cog' style='font-size:17px;color:rgb(255, 255, 255)'>&nbsp&nbsp Settings</i>
-          </div>
+        </a>
+        
+      </div>
 
             <body onLoad="initClock()">
 
