--- a/Consumer/homepage.html
+++ b/Consumer/homepage.html
@@ -24,9 +24,9 @@
       <!-- HEADER -->
       <header class="header">
         <div class="header__options">
-          <button class="header__pro">Log out</button>
+            <a href="../index.php" class="header__pro">Log out</a>
         </div>
-      </header>
+    </header>
 
       <!-- BODY -->
       <div class="body">
