--- a/Consumer/livingroom.html
+++ b/Consumer/livingroom.html
@@ -24,7 +24,7 @@
       <!-- HEADER -->
       <header class="header">
         <div class="header__options">
-            <a href="../index.php" class="header__pro">Log out</a>
+            <a href="../select.php" class="header__pro">Log out</a>
         </div>
     </header>
 
