--- a/Consumer/devices.html
+++ b/Consumer/devices.html
@@ -57,9 +57,12 @@
 
 
           <div class="sidebar_icon">
-            <a href="settings.html">
+            <form action="settings.php" method="GET">
+              <button type="submit" style="background: none; border: none; padding: 0; font-size: 17px; color: rgb(255, 255, 255);">
                 <i class='fas fa-cog' style='font-size:17px;color:rgb(255, 255, 255)'>&nbsp&nbsp Settings</i>
-            </a>
+              </button>
+            </form>
+          </div>
             
           </div>
 
