--- a/Consumer/rooms.html
+++ b/Consumer/rooms.html
@@ -85,11 +85,8 @@
 
                 <body>
                     <div class="container_box">
-                      <div class="boxes boxes1"> 
-                        <a href="livingroom.html">
-                          <p class="boxes-text" style="margin-top: -23px;">Living Room</p>
-                        </a>
-                        
+                      <div class="boxes boxes1">
+                        <a class="boxes-text" href="livingroom.php">Living Room</a>
                       </div>
 
                       <div class="boxes boxes2">
