--- a/Consumer/homepage.html
+++ b/Consumer/homepage.html
@@ -43,13 +43,13 @@
                 </a>
               </div>
 
-          <div class="sidebar_icon">
-            <a href="rooms.html">
-
-                <i  class='fas fa-th' style='font-size:17px;color:rgb(255, 255, 255)'>&nbsp&nbsp Rooms</i>
-
-            </a>
-          </div>
+              <div class="sidebar_icon">
+                <form action="rooms.php" method="GET">
+                  <button type="submit" style="background: none; border: none; padding: 0; font-size: 17px; color: rgb(255, 255, 255);">
+                    <i class='fas fa-cog' style='font-size:17px;color:rgb(255, 255, 255)'>&nbsp&nbsp Rooms</i>
+                  </button>
+                </form>
+              </div>
 
 
 
